--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/ekmadsen/Domain</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>domain factory-pattern repository-pattern unit-of-work-pattern</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
