--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -15,10 +15,11 @@
     <RepositoryUrl>https://github.com/ekmadsen/Domain</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>domain factory-pattern repository-pattern unit-of-work-pattern</PackageTags>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ErikTheCoder.Logging" Version="1.0.11" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
   </ItemGroup>
 
