--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,14 +8,14 @@
     <Authors>Erik Madsen</Authors>
     <Company>Erik Madsen</Company>
     <Product>ErikTheCoder.Domain</Product>
-    <Description>Defines factory, repository and unit of work patterns.</Description>
+    <Description>Defines factory, repository, and unit of work patterns.</Description>
     <Copyright>2020</Copyright>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/ekmadsen/Domain</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ekmadsen/Domain</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>domain factory-pattern repository-pattern unit-of-work-pattern</PackageTags>
-    <Version>1.0.7</Version>
+    <Version>1.0.8</Version>
   </PropertyGroup>
 
   <ItemGroup>
